<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:background="#fff"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/confirm_main_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textAlignment="center"
                    android:textColor="#1e1e1e"
                    android:textSize="14sp"
                    android:text="@string/txt_title_yes_no_custom_dialog"/>

                <TextView
                    android:id="@+id/confirm_main_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/confirm_main_tv"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:textAlignment="center"
                    android:textColor="#919090"
                    android:textSize="12sp"
                    android:text="@string/txt_contents_yes_no_custom_dialog"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_above="@+id/linearLayout_btn"
                    android:background="#dadada"/>

                <LinearLayout
                    android:id="@+id/linearLayout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/confirm_buy_cancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#f5f5f5"
                        android:gravity="center"
                        android:text="@string/dialog_no"
                        android:textColor="#ababab"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/confirm_buy_ok"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/dialog_yes"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>


        </android.support.v7.widget.CardView>

    </RelativeLayout>


</RelativeLayout>